# swedish-pathogens-portal

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  compose.yaml  devbox.json  docker-compose.yml  docker-prod-entrypoint.sh  manage.py  process-compose.yaml  prod-entrypoint.sh  pyproject.toml  tailwind.config.js
.github/: .gitmessage.txt  pull_request_template.md
.github/workflows/: publish_container.yaml  publish_image.yaml  ruff-linter.yaml
core/: asgi.py  settings.py  urls.py  wsgi.py
core/settings/: __init__.py  base.py  development.py  production.py  settings.py
core/static/css/: base.css
core/static/global/css/: base.css
core/static/js/: accordion.js
core/templates/: 404.html  base.html  breadcrumbs.html  footer.html  header.html
pages/about/: apps.py  urls.py  views.py
pages/about/templates/about/: funders.html  funding.html  index.html  nodes.html  partners.html
pages/citation/: __init__.py  apps.py  urls.py  views.py
pages/citation/templates/citation/: index.html
pages/dashboards/: __init__.py  apps.py  models.py  urls.py  views.py
pages/dashboards/migrations/: 0001_initial.py
pages/dashboards/templates/dashboards/: _dashboard_card.html  _icons.html  index.html  lineage_competition.html  seec-methodology.html  seec-virus.html  seec-wbs.html
pages/data_management/: app.py  urls.py  views.py
pages/data_management/templates/data_management/: .index.html.swp  index.html
pages/home/: apps.py  urls.py  views.py
pages/home/templates/home/: index.html
pages/news/: admin.py  apps.py  models.py  urls.py  views.py
pages/news/migrations/: 0001_initial.py  0002_rename_published_to_isactive.py
pages/news/templates/news/: detail.html  list.html
pages/privacy/: apps.py  urls.py  views.py
pages/privacy/templates/privacy/: index.html
pages/topics/: admin.py  apps.py  models.py  urls.py  views.py
pages/topics/migrations/: 0001_initial.py
pages/topics/templates/topics/: index.html  topic_detail.html  topic_list.html
pathogens_portal/: asgi.py  settings.py  urls.py  wsgi.py
pathogens_portal/static/css/: portal.css
pathogens_portal/templates/global/: 404.html  base.html  header.html  html_head_tag.html
utils/: __init__.py
utils/views/: __init__.py  _base_detail_view.py  _base_list_view.py  _base_template_view.py
