[project]
name = "swedish-pathogens-portal"
version = "0.1.0"
description = "The Swedish Pathogens Portal provides information about available datasets, resources, tools, and services related to pandemic preparedness in Sweden. We offer support to all those involved in pandemic preparedness research that are affiliated with a Swedish research institution or university."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2.4",
]
