[project]
name = "swedish-pathogens-portal"
version = "0.1.0"
description = "The Swedish Pathogens Portal provides information about available datasets, resources, tools, and services related to pandemic preparedness in Sweden. We offer support to all those involved in pandemic preparedness research that are affiliated with a Swedish research institution or university."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2.4",
    "django-environ>=0.12.0",
]

[dependency-groups]
dev = [
    "psycopg[binary]>=3.2.9",
]
runtime = [
    "psycopg[c]>=3.2.9",
]

# Ruff linting and formatter settings
[tool.ruff]

# Exclude a variety of commonly ignored directories.
exclude = [
    "_build",
    ".eggs",
    ".devbox",
    ".git",
    ".github",
    "migrations",
    "node_modules",
    ".pytest_cache",
    "__pycache__",
    ".ruff_cache",
    "site-packages",
    "static",
    "templates",
    ".venv",
    ".vscode",
]

# Indentation-width
indent-width = 4

# Line length
line-length = 88

[too.ruff.lint]

# Select rules to check for
select = [
    "ANN",  # flake8-annotations (type hints)
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "D",    # pydocstyle (docstrings)
    "DJ",   # flake8-django
    "E",    # pycodestyle errors (we can restrict to the default subset, which is E4 / E7 / E9)
    "F",    # Pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "PTH",  # flake8-use-pathlib (enforce pathlib usage)
    "S",    # flake8-bandit
    "SIM",  # flake8-simplify
    "UP",   # pyupgrade
    "W",    # pycodestyle warnings
]

[tool.ruff.format]

# Indent with spaces, rather than tabs.
indent-style = "space"

# Line ending with new line
line-ending = "native"

# Respect magic trailing commas.
skip-magic-trailing-comma = false

# Use double quotes for strings.
quote-style = "double"
